@@ -14,7 +14,7 @@
   <include package=".upgrades" />
   <include package=".viewlets" />
 
-  <!-- <i18n:registerTranslations directory="locales" /> -->
+  <i18n:registerTranslations directory="locales" />
 
   <genericsetup:registerProfile
       name="default"
