@@ -1,0 +1,23 @@
+<?xml version="1.0"?>
+<object name="portal_actions" meta_type="Plone Actions Tool"
+        xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+  <object name="mobile_buttons" meta_type="CMF Action Category">
+
+    <object name="toggle_search" meta_type="CMF Action" i18n:domain="ftw.mobilenavigation">
+      <property name="title" i18n:translate="">Toggle search</property>
+    </object>
+
+    <object name="toggle_usermenu" meta_type="CMF Action" i18n:domain="ftw.mobilenavigation">
+      <property name="title" i18n:translate="">Toggle usermenu</property>
+    </object>
+
+    <object name="toggle_navigation" meta_type="CMF Action" i18n:domain="ftw.mobilenavigation">
+      <property name="title" i18n:translate="">Toggle navigation</property>
+    </object>
+
+    <object name="toggle_slidenavi" meta_type="CMF Action" i18n:domain="ftw.mobilenavigation">
+      <property name="title" i18n:translate="">Toggle navigation</property>
+    </object>
+
+  </object>
+</object>
